c4prj1_deck/grade.txt
Grading at Tue Sep 22 05:58:51 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:61:83: error: expected ‘)’ before ‘;’ token
   deck->cards[deck->n_cards - 1] = malloc(sizeof((deck->cards[deck->n_cards - 1]));
                                                                                   ^
deck.c:63:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Compilation of deck.c failed

Overall Grade: F
